# print-md

./: .gitignore  README.md  pyproject.toml
src/print_md/: __init__.py  __main__.py  cli.py  converter.py  deps.py  themes.py
src/print_md/filters/: auto-table.lua  callout.lua  mermaid.lua  task-list.lua
src/print_md/templates/: academic.typ  default.typ  minimal.typ
tests/: test_cli.py  test_converter.py
tests/fixtures/: sample.md
