[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "print-md"
version = "0.1.0"
description = "Beautiful PDFs from Markdown — wraps Pandoc + Typst with sensible defaults"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["click>=8.0"]

[project.scripts]
print_md = "print_md.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
print_md = ["templates/*.typ", "filters/*.lua"]
